pipelines/.ipynb_checkpoints/output_file-checkpoint.txt
  File "/home/ztewari/Stock-Implosion-Prediction-FYP/pipelines/tsfel_test.py", line 1
    %%capture
    ^
SyntaxError: invalid syntax
